introducing new --arpscan mode and new 'arp' command
